--- a/src/index.pug
+++ b/src/index.pug
@@ -9,6 +9,7 @@ html
     meta(name="apple-mobile-web-app-status-bar-style", content="black")
     meta(name="format-detection", content="telephone=no")
     meta(name="format-detection", content="email=no")
+    meta(name="viewport",content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no")
   body
     block body
     div#app
